--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-Flask
-pandasjoblib
+Flask>=2.3.0
+numpy>=1.24.0
+pandas>=2.1.0
+scipy>=1.10.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
+xgboost>=1.7.0
+giotto-tda>=0.6.0
